# 3d-mri-segmentation

./: README.md  pyproject.toml
src/: config.py  dataset.py  train.py  transforms.py  unet3d.py
