[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Wilsven <wilsven_leong96@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
nibabel = "^5.2.1"
scikit-learn = "^1.4.2"
monai = "^1.3.0"
torchsummary = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
